[package]
name = "memento"
version = "0.0.1"
authors = []
build = "build.rs"

keywords = ["mcu", "arm", "embedded", "rtos"]
license = "MIT"

[dependencies]
void = "0.0"
cfg-if = "0.1"
stack = "0.1.3"
lazy_static = "0.1.15"
spin = "*"
allocators = "0.1.8"
alloc_buddy_simple = { version = "0.1.0", features = ["use-as-rust-allocator"] }

[features]
default = ["nightly"]
nightly = []
